# typeless-lite

./: .env.example  .gitignore  AGENTS.md  ANDROID_LIGHTWEIGHT.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
docs/: ITERATION_LOG.md  NEXT_ITERATION.md  RESEARCH_NOTES.md
notes/: product-iteration-2026-03-15.md
src/: app-config.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
