[package]
name = "typeless-lite"
version = "0.1.0"
description = "Ultra-minimal Typeless-like desktop MVP"
authors = ["anton"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
cpal = "0.16"
hound = "3.5"
arboard = "3.4"
thiserror = "2.0"
tokio = { version = "1", features = ["sync"] }
core-foundation = "0.10.1"
core-foundation-sys = "0.8.7"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
